Bug 99387 - crash getting document size ...
Summary: crash getting document size ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.1.0.1 rc
Hardware: All All
: medium normal
Assignee: Michael Meeks
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-19 08:23 UTC by Michael Meeks
Modified: 2016-10-25 19:09 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2016-04-19 08:23:14 UTC
Trace seen:

016-04-19T07:14:36.263626+00:00 ip-172-31-9-52 loolwsd[1401]: /lib64/libpthread.so.0(+0xf870) [0x7f413e78a870]
2016-04-19T07:14:36.264017+00:00 ip-172-31-9-52 loolwsd[1401]: /opt/collaboraoffice5.0/program/libmergedlo.so(_ZNK11SdrPageView11GetPageRectEv+0xa) [0x7f413b48feda]
2016-04-19T07:14:36.264406+00:00 ip-172-31-9-52 loolwsd[1401]: /opt/collaboraoffice5.0/program/../program/libsdlo.so(_ZN18SdXImpressDocument15getDocumentSizeEv+0x24) [0x7f412115da44]
2016-04-19T07:14:36.264794+00:00 ip-172-31-9-52 loolwsd[1401]: /opt/collaboraoffice5.0/program/libmergedlo.so(+0x1c4ecbf) [0x7f413ae66cbf]
2016-04-19T07:14:36.265193+00:00 ip-172-31-9-52 loolwsd[1401]: /usr/bin/loolforkit(_ZN19ChildProcessSession9getStatusEPKci+0xdd) [0x423cad]
Comment 1 Michael Meeks 2016-04-19 08:26:00 UTC
https://gerrit.libreoffice.org/24239 tdf#99387 - protect LOK document size API from corner-cases.
Comment 2 Commit Notification 2016-04-19 09:14:32 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1abcf1bcbfa90ee1714b4d37fb38b639dabbcdfe

tdf#99387 - protect LOK document size API from corner-cases.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.