tdf#99387 - protect LOK document size API from corner-cases.

Change-Id: I5dd1d37ea783a65f0c8f3ad9c3c9cabf72ae036d
(cherry picked from commit 10448704b50a5cb24d38602a76656c266f8e0366)